# cython_running_standard_deviation_example

./: .gitignore  README.md  main.py  multi_variable.py  pyproject.toml  setup.py
cython_example/: operations.py
cython_example/native/: __init__.py  standard_deviation_1.pyx  standard_deviation_2.pyx  standard_deviation_3.pyx  standard_deviation_4.pyx  standard_deviation_5.pyx
