[tool.poetry]
name = "cython_example"
version = "0.1.0"
description = ""
authors = ["Jack Liddiard <j.liddiard@resilientplc.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
cython = "^0.29.20"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
